<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myAccount"
            android:title="@string/menu_Account" />
        <item
            android:id="@+id/mySensor"
            android:title="@string/menu_Sensor" />
        <item
            android:id="@+id/myBluetooth"
            android:title="@string/menu_Bluetooth" />
        <item
            android:id="@+id/logout"
            android:title="@string/menu_Logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
